--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
             <version>3.141.59</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>5.3.1</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
